# ComfyUI-TTS2Whisper

./: ASRMapper.py  LICENSE  README.md  UnionTools.py  Utils.py  WhisperInjection.py  __init__.py  pyproject.toml  requirements.txt  test.py
simple_code/: asr_mapping_text.cpp
types/: whisper.ts
