# pyproject.toml
[project]
name = "ComfyUI-TTS2Whisper" # Unique identifier for your node. Immutable after creation.
description = ""
version = "0.0.6" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/teddy1565/ComfyUI-TTS2Whisper"

[tool.comfy]
PublisherId = "teddy1565" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-TTS2Whisper" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)